# content-curator

./: .gitignore  AI_Avatar_Automation.md  DEVELOPER_GUIDE.md  ONBOARDING.md  README.md  USER_GUIDE.md  app_instruction.md  manual_tasks.md  pyproject.toml  requirements.txt  run_backend.sh
backend/: constants.py  langgraph_workflow.py  main.py
frontend/: app.js  index.html
