[project]
name = "content-curator"
version = "0.1.0"
description = "Content Curator Application"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "langgraph>=0.0.40",
    "langchain>=0.1.20,<0.3.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-google-genai>=0.0.6",
    "pydantic>=2.5.0,<3.0.0",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend"]

